[package]
name = "audio-to-video"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/conorpo/audio-to-video"
description = "Converts an audio file to a video file with a still image."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
